examples/diagnostics/expected/1232-diagnostics-enum-variant-unknown-payload.stderr
error: 'nope' is not a variant of 'V' (variants are: a, b)
  --> examples/diagnostics/1232-diagnostics-enum-variant-unknown-payload.sx:20:13
   |
20 |     x : V = .nope(7);   // `nope` is not a variant of V — must be a compile error
   |             ^^^^^
